-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.0 Alpha
-
None
-
Change-Id: I61aee0d1acb5e13cbabf4ec878054be470fc01c2
Try RTA test "Canvas3D_conformance_drawingbuffer_test" to reproduce.
Not sure if this is fixable, as canvas width/height are the QML component's, and not the actual canvas's.
For Gerrit Dashboard: QTBUG-45733 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
111047,2 | Added a maximum viewport dimension check to width and height | 5.5 | qt/qtcanvas3d | Status: MERGED | +2 | 0 |
134773,2 | Fixed canvas width/height maximum limiting | master | qtqa/tqtc-qt-rta | Status: MERGED | +2 | 0 |