Added a maximum viewport dimension check to width and height

Change-Id: I61aee0d1acb5e13cbabf4ec878054be470fc01c2
Task-number: QTBUG-45733
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>